Will resume the work Once I am Free.

--- a/mysite/templates/mysite/navigation.html
+++ b/mysite/templates/mysite/navigation.html
@@ -7,7 +7,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services"><strong>Services</strong></a></li>
+
+                <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown"><strong><font color="white">Services</font></strong>
+                <span class="caret"></span></button>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                    <li role="presentation"><a role="menuitem" href="#">Food Waste Management System</a></li>
+                </ul>
+                </div>
+
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio"><strong>Product</strong></a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"><strong>About</strong></a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team"><strong>Team</strong></a></li>
