--- a/mysite/templates/mysite/portfolio.html
+++ b/mysite/templates/mysite/portfolio.html
@@ -62,8 +62,8 @@
                         <img class="img-fluid" src="{% static 'assets/img/portfolio/01-thumbnail.jpg' %}" alt="" />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Snacks</div>
-                        <div class="portfolio-caption-subheading text-muted">Tiffin</div>
+                        <div class="portfolio-caption-heading">Khicdi</div>
+                        <div class="portfolio-caption-subheading text-muted">Saraswati Puja Prasad</div>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Puja Prasad</div>
-                        <div class="portfolio-caption-subheading text-muted">Veg Thali</div>
+                        <div class="portfolio-caption-subheading text-muted">Boot Moong</div>
                     </div>
                 </div>
             </div>
